# mutatis

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: main.yml
derive/: Cargo.toml
derive/src/: container_attributes.rs  field_attributes.rs  lib.rs
src/: _guide.rs  check.rs  error.rs  lib.rs  log.rs  mutators.rs  rng.rs
src/_guide/: cargo_features.rs  comparisons.rs  derive_macro.rs  fuzzer_integration.rs  msrv.rs  shrinking.rs
src/mutators/: combinators.rs  core_impls.rs
src/mutators/core_impls/: option.rs  result.rs
tests/: derive.rs
